# sgc_coaph

./: .gitignore  README.md
apps/coaph_contract_ops/: README.md  license.txt  pyproject.toml
apps/coaph_contract_ops/coaph_contract_ops/: boot.py  hooks.py  modules.txt  patches.txt
apps/coaph_contract_ops/coaph_contract_ops/coaph_contract_ops/automation/: actions.py  contrato.py  dashboard.py  rollup.py  scheduler.py  test_dashboard.py  test_rollup.py
apps/coaph_contract_ops/coaph_contract_ops/coaph_contract_ops/doctype/aditivo_contratual/: aditivo_contratual.json  aditivo_contratual.py
apps/coaph_contract_ops/coaph_contract_ops/config/: desktop.py
apps/coaph_contract_ops/coaph_contract_ops/desktop_icon/: contratos.json
apps/coaph_contract_ops/coaph_contract_ops/fixtures/: dashboard_chart.json  notification.json  number_card.json  role.json  workflow.json  workflow_action_master.json  workflow_state.json  workspace.json
apps/coaph_contract_ops/coaph_contract_ops/integrations/gcoop/: client.py  mapping.py  sync.py
apps/coaph_contract_ops/coaph_contract_ops/patches/: v16_remove_modulos_obsoletos.py
apps/coaph_contract_ops/coaph_contract_ops/public/css/: coaph_brand.css
apps/coaph_contract_ops/coaph_contract_ops/public/js/: analise_viabilidade.js  ciclo_mensal_medicao.js  contrato_360.js  disputa_proposta_coaph.js  formalizacao_contratual.js  oportunidade_coaph.js
apps/coaph_contract_ops/coaph_contract_ops/scripts/: import_backlog.py  seed_demo_data.py  setup_coaph.py
deploy/: .env.example  Caddyfile  Containerfile  Containerfile.local  README.md  (+6 more)
(+92 files in other folders)
