[project]
name = "coaph_contract_ops"
authors = [
    { name = "COAPH", email = "ti@coaph.example.org" },
]
description = "SGC COAPH — Gestão 360 de Contratos (app customizado Frappe/ERPNext)"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # Sem dependências externas: usa apenas Frappe Framework + ERPNext oficiais.
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.frappe-dependencies]
frappe = ">=15.0.0,<16.0.0"
erpnext = ">=15.0.0,<16.0.0"
